--- a/templates/baselab.html
+++ b/templates/baselab.html
@@ -57,30 +57,26 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
-                <a href="{% url 'homebloodbank' %}" class="nav-item nav-link active">Home</a>
-                <a href="{% url 'registerasdonor' %}" class="nav-item nav-link">Patients</a>
-                <a href="{% url 'donatenow' %}" class="nav-item nav-link">Doctors</a>
-                <a href="{% url 'waitforemail' %}" class="nav-item nav-link">Book Covid-19 test</a>
+                <a href="{% url 'homelab' %}" class="nav-item nav-link active">Home</a>
+                <a href="#" class="nav-item nav-link">Patients</a>
+                {% comment %} <a href="#" class="nav-item nav-link">Doctors</a> {% endcomment %}
+                <a href="#" class="nav-item nav-link">Book Covid-19 test</a>
 
 
-                {% comment %} {% if user.is_authenticated %}
-                {% if not user.donor %}
-                <a href="{% url 'registerasdonor' %}" class="nav-item nav-link">Patients</a>
-                {% else %} 
-                {% if not show_survey_form %}  <!-- Add this condition -->
-                <a href="{% url 'donatenow' %}" class="nav-item nav-link">Doctors</a>
-                {% else %} 
-                <a href="{% url 'waitforemail' %}" class="nav-item nav-link">Book Covid-19 test</a>
-                {% endif %}    
-                {% endif %} 
-                <a href="{% url 'campschedulesfordonor' %}" class="nav-item nav-link">Appointment</a>           
-                {% endif %} {% endcomment %}
-                
-                <a href="{% url 'about' %}" class="nav-item nav-link">About Us</a>
-                <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
+               
+                <a href="#" class="nav-item nav-link">About Us</a>
                 {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'loggout' %}">Logout</a>
-                <a href="#" class="nav-item nav-link">{{user.email}}</a>
+                    <div class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{ user.email }}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="userDropdown">
+                            <a class="dropdown-item" href="{% url 'viewtestbookings' %}">Bookings</a>
+                            <a class="dropdown-item" href="{% url 'loggout' %}">Logout</a>
+                        </div>
+                    </div>
+                {% else %}
+                    <a href="#" class="nav-item nav-link">Login</a>
                 {% endif %}
             </div>
         </div>
