--- a/templates/book_now.html
+++ b/templates/book_now.html
@@ -89,8 +89,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="booking_date">Booking Date:</label>
-                    <input type="date" id="booking_date" name="booking_date" required oninput="validateBookingDate()">
+                    <label for="test_date">Booking Date:</label>
+                    <input type="date" id="test_date" name="test_date" required oninput="validateBookingDate()">
                     <p id="bookingDateError" class="text-danger"></p>
                 </div>
                 
@@ -228,7 +228,7 @@
         }
     }
     function validateBookingDate() {
-        var bookingDate = document.getElementById('booking_date').value;
+        var bookingDate = document.getElementById('test_date').value;
         var selectedBookingDate = new Date(bookingDate);
         var currentDate = new Date();
     
